--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,14 @@ dependencies = [
     "mypy>=1.18.2",
     "opencv-python>=4.12.0.88",
     "pyqt5>=5.15.11",
+    "pytest-cov>=7.0.0",
     "ruff>=0.14.0",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
 ]
 
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 
 [tool.mypy]
 python_version = "3.11"
